--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 <body>
     <main>
         <label for="fname">First name:</label>
-        
+        <input type="text" id="fname" name="fname"><br><br>
+        <label for="lname">Last name:</label>
+        <input type="text" id="lname" name="lname"><br><br>
+        <label for="Email">Email:</label>
+        <input type="email" id="Email" name="email"><br><br>
     </main>
 </body>
 </html>
