--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <title>Visitor's Log</title>
     <header>
         <div class="topnav">
-        <a class="active" href="#home">Home</a>
-        <a href="#contact">Contact</a>
-        <a href="#about">About</a>
-    </div>
+            <a class="active" href="#home">Home</a>
+            <a href="#contact">Contact</a>
+            <a href="#about">About</a>
+        </div>
     </header>
-    </head>
+</head>
         <main>
             <div>
                 <img src="welcome.jpg" alt="nice welcome image" width="500" height="600">
@@ -23,6 +23,14 @@
         <input type="text" id="lname" name="lname"><br><br>
         <label for="Email">Email:</label>
         <input type="email" id="Email" name="email"><br><br>
+        <input type="submit" value=" send">
     </main>
+
 </body>
+<footer>
+    <footer>
+        <p>Created by: B Ray</p>
+        <p><a href="sendemailto:bee@ray.com">contact@bray.com</a></p>
+      </footer>
+</footer>
 </html>
